bindings/ruby/lib/zwebrap/ffi.rb

################################################################################
#  THIS FILE IS 100% GENERATED BY ZPROJECT; DO NOT EDIT EXCEPT EXPERIMENTALLY  #
#  Please refer to the README for information about making permanent changes.  #
################################################################################

require 'ffi'

require_relative 'ffi/version'


module Zwebrap
  module FFI
    extend ::FFI::Library
    
    def self.available?
      @available
    end
    
    begin
      lib_name = 'libzwebrap'
      lib_paths = ['/usr/local/lib', '/opt/local/lib', '/usr/lib64']
        .map { |path| "#{path}/#{lib_name}.#{::FFI::Platform::LIBSUFFIX}" }
      ffi_lib lib_paths + [lib_name]
      @available = true
    rescue LoadError
      warn ""
      warn "WARNING: ::Zwebrap::FFI is not available without libzwebrap."
      warn ""
      @available = false
    end
    
    if available?
      opts = {
        blocking: true  # only necessary on MRI to deal with the GIL.
      }
      
      attach_function :zwr_client_new, [], :pointer, **opts
      attach_function :zwr_client_destroy, [:pointer], :void, **opts
      attach_function :zwr_client_print, [:pointer], :void, **opts
      attach_function :zwr_client_actor, [:pointer], :pointer, **opts
      attach_function :zwr_client_msgpipe, [:pointer], :pointer, **opts
      attach_function :zwr_client_connected, [:pointer], :bool, **opts
      attach_function :zwr_client_connect, [:pointer, :string, :pointer, :string], :int, **opts
      attach_function :zwr_client_set_handler, [:pointer, :string, :string], :int, **opts
      attach_function :zwr_client_request, [:pointer, :pointer, :pointer], :int, **opts
      attach_function :zwr_client_deliver, [:pointer, :pointer, :pointer], :int, **opts
      attach_function :zwr_client_recv, [:pointer], :pointer, **opts
      attach_function :zwr_client_command, [:pointer], :string, **opts
      attach_function :zwr_client_status, [:pointer], :int, **opts
      attach_function :zwr_client_reason, [:pointer], :string, **opts
      attach_function :zwr_client_sender, [:pointer], :pointer, **opts
      attach_function :zwr_client_content, [:pointer], :pointer, **opts
      attach_function :zwr_client_test, [:bool], :void, **opts
      
      require_relative 'ffi/zwr_client'
    end
  end
end

################################################################################
#  THIS FILE IS 100% GENERATED BY ZPROJECT; DO NOT EDIT EXCEPT EXPERIMENTALLY  #
#  Please refer to the README for information about making permanent changes.  #
################################################################################
